Install fonts and add hero title and sub-title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Bolo de Rolo - Brazilian Cake</title>
 
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script&family=Open+Sans:wght@300&family=Parisienne&display=swap" rel="stylesheet">
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -14,7 +19,7 @@
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">
-        <img src="images/logo.png">
+        <img src="images/logo.png" alt="bolo de rolo brand logo ">
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Übersicht</a></li>
@@ -37,7 +42,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Mit Rezept!</a>
+          <h1 id="hero-title">Bolo de Rolo</h1>
+          <h2 id="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
+          <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Zum Rezept</a>
         </div>
       </div>
     </div>
@@ -48,7 +55,7 @@
   <div class="container">
     <div class="section">
       <!--   Variations Section with image slider   -->
-      <h2 class="center">Variationen</h2>
+      <h2 class="center section-header">Variationen</h2>
       <div class="image-slider-wrapper">
         <div class="image-row">
           <div class="imagegroup" style="border:2px solid white">
