--- a/index.html
+++ b/index.html
@@ -84,27 +84,27 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+          <h2 class="header col s12 light"><span class="quotes">"</span> Brasilianische Kuchentradition trifft kreatives Berlin <span class="quotes end-quote">"</span></h2>
+          <p class="col s6 offset-s3"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
         </div>
       </div>
     </div>
     <div class="parallax" id="#leaves-background"><img src="images/leaves-background-image.png" alt="background image with tropical leaves"></div>
   </div>
 
-  <div class="container">
     <div class="section">
-
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Contact Us</h4>
-          <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+        <div class="col s6">
+          <div class="container">
+            <h1 class="mdi-content-send brown-text">Wie alles began! Lerne wie es geht! Mit Rezept!</h1>
+            <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
+          </div>
+        </div>
+        <div class="col s6 half-page-images">
+          <img src="images/figures-background-image.png" alt="figures background image">
         </div>
       </div>
-
     </div>
-  </div>
-
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
@@ -114,7 +114,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3"></div>
+    <div class="parallax"><img src="images/figures-background-image.png" alt="Unsplashed background img 3"></div>
   </div>
 
   <footer class="page-footer teal">
