Add background images and smaller sections to main page

--- a/index.html
+++ b/index.html
@@ -92,19 +92,35 @@
     <div class="parallax" id="#leaves-background"><img src="images/leaves-background-image.png" alt="background image with tropical leaves"></div>
   </div>
 
-    <div class="section">
-      <div class="row">
-        <div class="col s6">
-          <div class="container">
-            <h1 class="mdi-content-send brown-text">Wie alles began! Lerne wie es geht! Mit Rezept!</h1>
-            <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;</p>
-          </div>
+  <div class="section small-section no-pad-bot no-pad-top">
+    <div class="row">
+      <div class="col s6">
+        <div class="container">
+          <h2 class="mdi-content-send section-header">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
+          <p class="left-align light">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
+          <p>
+            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Hintergrund</a>
+          </p>
         </div>
-        <div class="col s6 half-page-images">
-          <img src="images/figures-background-image.png" alt="figures background image">
+      </div>
+      <div class="col s6 half-page-images" id="figures-background"></div>
+    </div>
+  </div>
+
+  <div class="section small-section no-pad-bot no-pad-top">
+    <div class="row">
+      <div class="col s6 half-page-images" id="boloderolo-background"></div>
+      <div class="col s6">
+        <div class="container">
+          <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
+          <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
+          <p>
+            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Ich will das lernen!</a>
+          </p>
         </div>
       </div>
     </div>
+  </div>
 
   <div class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
