Finalize home page

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
   </nav>
 
   <div id="index-banner" class="parallax-container">
-    <div class="section no-pad-bot">
+    <div class="no-pad-bot" id="hero-image-section">
       <div class="container">
-        <div class="row center">
+        <div id="hero-text-wrapper">
           <h1 id="hero-title">Bolo de Rolo</h1>
           <h2 id="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
           <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Zum Rezept</a>
@@ -141,50 +141,29 @@
     </div>
   </div>
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
+  <footer class="page-footer no-pad-top">
+    <!-- Social media -->
+    <div class="section no-pad-bot social-media-background">
       <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">A modern responsive front-end framework based on Material Design</h5>
+        <div class="row center social-media-icons">
+          <a href="https://www.facebook.com/boloderoloberlin/"><img src="images/facebook-f.svg"></a>
+          <a href="https://br.pinterest.com/rese_m/bolo-de-rolo-berlin/"><img src="images/pinterest-p.svg"></a>
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/figures-background-image.png" alt="Unsplashed background img 3"></div>
-  </div>
-
-  <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+          <h5 class="white-text">Bolo de Rolo</h5>
+          <p class="grey-text text-lighten-4">Du möchtest gern mehr über mich erfahren oder du hast eine Frage? Du erreichst mich über Bolo.de.Rolo.Berlin@gmail.com. Ich freue mich über deine Nachricht.</p>
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
+    <div class="copyright">
+      <a class="copyright-wrapper" href="https://theresamannschatz.design">
+        <img class="brand-figure" id="chamaeleon-footer-brand" src="images/chamaeleon.png" alt="chamaleon-symbol-footer">
+        <p>copyright @theresamannschatz.design 2023</p>
+      </a>
     </div>
   </footer>
 
