Add recipe page

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Bolo de Rolo - Brasilianischer Kuchen</title>
+  <title>Bolo de Rolo - Rezept</title>
 
   <!-- Favicons -->
-  <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="../apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="../apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="../apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="../apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="../apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="../apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="../apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="../android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="../favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+  <link rel="manifest" href="../manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="../ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
   <!-- Fonts -->
@@ -31,14 +31,14 @@
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo">
-        <img src="images/logo.png" alt="bolo de rolo brand logo ">
+        <img src="../images/logo.png" alt="bolo de rolo brand logo ">
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Übersicht</a></li>
@@ -57,17 +57,23 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
-    <div class="no-pad-bot" id="hero-image-section">
-      <div class="container">
-        <div id="hero-text-wrapper">
-          <h1 id="hero-title">Bolo de Rolo</h1>
-          <h2 id="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
-          <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Zum Rezept</a>
-        </div>
+
+  <div id="recipe-start-section">
+    <div class="container">
+      <div id="first-row">
+        <div class="image-wrapper"><img src="../images/products/goiaba.jpeg" alt="bolo de rolo hero background image"></div>
+        <a href="#" class="btn">paypal</a>
       </div>
+      <div id="intro-content">
+        <h3><span class="handwriting">Jetzt gehts los!</span> Mein Rezept</h3>
+        <p>Zunächst möchte ich euch gerne sagen, dass ich euch den leckeren Kuchen leider aus persönlichen und zeitlichen Gründen nicht mehr zum Verkauf anbieten kann. Diejenigen unter euch, die in den Genuss meines Kuchens kommen konnten, möchte ich sehr danken und hoffe, es hat geschmeckt.<span class="">Muito obrigada!</span></p>
+        <p>Damit diejenigen unter euch, die leider keinen mehr bestellen konnten, möchte ich nun zeigen, wie ihr den Kuchen auch mit etwas Geduld und Übung selbst herstellen könnt.</p>
+        <p>Ich habe eine ganze Weile gebraucht - nämlich 4 Monate - bis ich den Dreh raus hatte. Ich musste dafür auch erst einmal das geeignete Werkzeug, die Ideen für die Geschmacksrichtungen, die Zutaten und das Verpackungsmaterial finden.</p>
+        <p>Mein Rezept des Bolo de Rolo mit Goiaba entspricht nicht ganz dem Original, da er weniger süß ist. Ich habe die Erfahrung gemacht, dass gerade bei der Süße hier weniger mehr ist. Weiter unten Verlinke ich euch die Sachen, die ich im folgenden Rezept verwendet habe. :)</p>
+        <p>Aber jetzt soll es mal losgehen!</p>
+      </div>
+
     </div>
-    <div class="parallax"><img src="images/bolo-hero-image.png" alt="bolo de rolo hero background image"></div>
   </div>
 
 
