2nd recipe section

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -66,43 +66,39 @@
       </div>
       <div id="intro-content">
         <h3><span class="handwriting">Jetzt gehts los!</span> Mein Rezept</h3>
-        <p>Zunächst möchte ich euch gerne sagen, dass ich euch den leckeren Kuchen leider aus persönlichen und zeitlichen Gründen nicht mehr zum Verkauf anbieten kann. Diejenigen unter euch, die in den Genuss meines Kuchens kommen konnten, möchte ich sehr danken und hoffe, es hat geschmeckt.<span class="">Muito obrigada!</span></p>
+        <p>Zunächst möchte ich euch gerne sagen, dass ich euch den leckeren Kuchen leider aus persönlichen und zeitlichen Gründen nicht mehr zum Verkauf anbieten kann. Diejenigen unter euch, die in den Genuss meines Kuchens kommen konnten, möchte ich sehr danken und hoffe, es hat geschmeckt.<span class="text-highlight">Muito obrigada!</span></p>
         <p>Damit diejenigen unter euch, die leider keinen mehr bestellen konnten, möchte ich nun zeigen, wie ihr den Kuchen auch mit etwas Geduld und Übung selbst herstellen könnt.</p>
         <p>Ich habe eine ganze Weile gebraucht - nämlich 4 Monate - bis ich den Dreh raus hatte. Ich musste dafür auch erst einmal das geeignete Werkzeug, die Ideen für die Geschmacksrichtungen, die Zutaten und das Verpackungsmaterial finden.</p>
         <p>Mein Rezept des Bolo de Rolo mit Goiaba entspricht nicht ganz dem Original, da er weniger süß ist. Ich habe die Erfahrung gemacht, dass gerade bei der Süße hier weniger mehr ist. Weiter unten Verlinke ich euch die Sachen, die ich im folgenden Rezept verwendet habe. :)</p>
         <p>Aber jetzt soll es mal losgehen!</p>
       </div>
-
     </div>
   </div>
 
-
-  <div class="container">
-    <div class="section">
-      <!--   Variations Section with image slider   -->
-      <h2 class="center section-header">Variationen</h2>
-      <div class="image-slider-wrapper">
-        <div class="image-row">
-          <div class="imagegroup" style="border:2px solid white">
-            <img src="images/products/granatapfel-pistazie.jpeg" alt="granatapfel-pistazie cake">
-            <img src="images/products/schoko-caramel.jpeg" alt="schoko-caramel cake">
-            <img src="images/products/schoko-erdbeer.jpeg" alt="schoko-erdbeer cake">
-            <img src="images/products/zitrone-ingwer.jpeg" alt="zitrone-ingwer cake">
-            <img src="images/products/goiaba.jpeg" alt="goiaba-bolo">
-          </div>
-       </div>
-       <div class="image-row">
-        <div class="imagegroup" style="border:2px solid white">
-          <img src="images/products/goiaba.jpeg" alt="goiaba-bolo">
-          <img src="images/products/kirsch-mandel.jpeg" alt="kirsch-mandel cake">
-          <img src="images/products/maracuja-kokos.jpeg" alt="maracuja-kokos cake">
-          <img src="images/products/papaya2.jpeg" alt="papaya cake">
-          <img src="images/products/schoko-erdbeer.jpeg" alt="schoko-erdbeer cake">
+  <div id="recipe-first-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h3 class="section-header">Zutaten</h3>
+          <div id="ingredient-image"><img src="../images/recipe-goiaba.jpg" alt="bolo de rolo recipe image"></div>
         </div>
-     </div>
+        <div class="col s12 m6">
+          <h3><span class="handwriting">Nur 4 Zutaten und eine Füllung!</span></h3>
+          <ul id="ingredients">
+            <li>Butter - 250 g</li>
+            <li>Zucker - 250 g</li>
+            <li>Weizenmehl - 250 g</li>
+            <li>Eier - 6</li>
+            <li>Goiabada (Guaven-Marmelade) - 1 Glas</li>
+          </ul>
+          <p>Ich mag besonders Bio-Zutaten - das würde ich euch auch empfehlen. Vollkornprodukte habe ich jedoch nicht ausprobiert, da ich recht nah am Original-Rezept bleiben möchte.</p>
+          <p>Die Füllung - also die Marmelade, kann man natürlich auch selbst machen, aber leider bekommt man in Berlin nur schwer frische Guaven. Wenn ihr natürlich an Früchte kommen könnt, dann macht die Marmelade gerne selbst. Die Einzige Voraussetzung ist, dass sie wirklich recht dick ist, so dass ihr sie gut verstreichen könnt, ohne den Teig zu durchweichen.</p>
+        </div>
       </div>
     </div>
   </div>
+
+
 
 
   <div class="parallax-container valign-wrapper">
