Add all recipe steps

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/bolo-hero-image.png" alt="bolo de rolo hero background image"></div>
+    <div class="parallax"><img src="images/bolo-hero-image.jpg" alt="bolo de rolo hero background image"></div>
   </div>
 
 
@@ -108,7 +108,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax" id="#leaves-background"><img src="images/leaves-background-image.png" alt="background image with tropical leaves"></div>
+    <div class="parallax" id="#leaves-background"><img src="images/leaves-background-image.jpg" alt="background image with tropical leaves"></div>
   </div>
 
   <div class="section small-section no-pad-bot no-pad-top">
