--- a/recipe/index.html
+++ b/recipe/index.html
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col s12 m6">
           <h3 class="section-header">Zutaten</h3>
-          <div id="ingredient-image"><img src="../images/recipe-goiaba.jpg" alt="bolo de rolo recipe image"></div>
+          <div class="ingredient-image"><img src="../images/recipe-goiaba.jpg" alt="bolo de rolo recipe image"></div>
         </div>
         <div class="col s12 m6">
           <h3><span class="handwriting">Nur 4 Zutaten und eine Füllung!</span></h3>
@@ -98,46 +98,124 @@
     </div>
   </div>
 
-
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h2 class="header col s12 light"><span class="quotes">"</span> Brasilianische Kuchentradition trifft kreatives Berlin <span class="quotes end-quote">"</span></h2>
-          <p class="col s6 offset-s3"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
+  <div id="recipe-second-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m12">
+          <h3 class="section-header">Anleitung</h3>
         </div>
-      </div>
-    </div>
-    <div class="parallax" id="#leaves-background"><img src="images/leaves-background-image.png" alt="background image with tropical leaves"></div>
-  </div>
-
-  <div class="section small-section no-pad-bot no-pad-top">
-    <div class="row">
-      <div class="col s6">
-        <div class="container">
-          <h2 class="mdi-content-send section-header">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
-          <p class="left-align light">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
+        <div class="col s12 m5">
+          <p>Die Herstellung ist etwas aufwendig und nicht ganz leicht, aber es lohnt sich und ihr bekommt mit einem Schlag sogar gleich zwei Kuchen à ca. 600g.</p>
+          <div class="row">
+            <div class="col s12 m7 right-align">
+              <p><img class="characteristics" src="../images/clock-regular.svg"></p>
+              <p><img class="characteristics" src="../images/gauge-high-solid.svg"></p>
+              <p><img class="characteristics" src="../images/cat-solid.svg"></p>
+            </div>
+            <div class="col s12 m6">
+              <p>60-90 min<p>
+              <p>schwer</p>
+              <p>min 10 Portionen</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6">
+          <h3><span class="handwriting recipe-step">1 Zucker-Butter-Masse</span></h3>
           <p>
-            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Hintergrund</a>
+            Zunächst die weiche Butter (250g) in kleinen Stückchen in eine Schüssel geben.
+            250g Zucker ebenfalls in die Schüssel geben.
+            Mit einer Gabel den Zucker mit der Butter cremig vermengen. Dazu einfach mit der Gabel den Zucker in die Butter drücken.
+          </p>
+          <p class="hint">
+            <span class="hint-header">Tipp: </span>Falls die Butter zu fest ist, kann man sie im Backofen auch ein wenig an schmelzen. Achtung! sie sollte nur weich nicht flüssig sein, da sonst der Teig später zu fest wird.
           </p>
         </div>
       </div>
-      <div class="col s6 half-page-images" id="figures-background"></div>
     </div>
   </div>
 
-  <div class="section small-section no-pad-bot no-pad-top">
-    <div class="row">
-      <div class="col s6 half-page-images" id="boloderolo-background"></div>
-      <div class="col s6">
-        <div class="container">
-          <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
-          <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
+  <div id="recipe-third-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h3><span class="handwriting recipe-step">2 Jetzt die Eier</span></h3>
+          <p>Nun nacheinander die 6 Eier hinzugeben. Nach jedem Ei umrühren und erst danach das nächste Ei einrühren.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div id="recipe-fourth-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m5">
+          <div class="ingredient-image padding-top"><img src="../images/mini-bolos.jpeg" alt="a lot of small cakes"></div>
+          <p class="hint">Wenn ihr jeweils nur zwei Teige einrollt, dann könnt ihr so kleine Kuchensnacks backen. :)</p>
+        </div>
+        <div class="col s12 m7">
+          <h3><span class="handwriting recipe-step">3 Jetzt das Mehl</span></h3>
           <p>
-            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Ich will das lernen!</a>
+            Zu aller letzt 250 g durch ein Sieb zur Eier-Zucker-Butter Masse geben und verrühren. Der Teig sollte jetzt nicht zu fest, aber auch nicht flüssig sein. Er sollte cremig sein.
           </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-fifth-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m5">
+          <div class="ingredient-image padding-top"><img src="../images/step-4.jpeg" alt="cake dough"></div>
+        </div>
+        <div class="col s12 m7">
+          <h3><span class="handwriting recipe-step">4 Vorbereitung der Teige</span></h3>
+          <p>
+            Der Teig kann nun endlich auf das Backblech verteilt werden. Hierzu kleckst du ca. 4-5 Esslöffel Teig auf das Backpapier und verteilst es vorsichtig mit einem Crepe Verteiler. Der Teig sollte sehr dünn wie ein Crepe sein und gleichmäßig verteilt. Aus dem Teig solltest du ca. 5 Teige herstellen können.
+          </p>
+          <p class="hint"><span class="hint-header">Tipp: </span>Falls du mehrere Bleche und wiederverwendbares Backpapier eins zur Hand hast, dann kannst du schon mehrere Teige vorbereiten.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-sixth-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m5">
+          <div class="ingredient-image padding-top"><img src="../images/step-5.jpeg" alt="cake baking"></div>
+        </div>
+        <div class="col s12 m7">
+          <h3><span class="handwriting recipe-step">5 Backen und Füllung</span></h3>
+          <p>
+            Das Backblech mit dem Teig im vorgeheizten Backofen bei 170 Grad (Umluft) ca. 7 min backen. Immer mal wieder in den Ofen schauen. Der Teig darf nicht zu kross gebacken werden, da er sich dann nicht mehr rollen lässt und zerbricht. Er ist fertig, wenn keine feuchten Stellen mehr zu sehen sind, der Teig noch nicht braun ist und eine durchgängige Biskuitschicht mit kleinen Bläschen gebildet hat.</p>
+          <p class="hint"><span class="hint-header">Tipp: </span>Am Rand des Backblechs wird der Teig manchmal schon etwas braun. Das ist aber nicht so schlimm, wenn es nur kleine Bereiche sind. Der 'Teigbruch' wird dann einfach mit eingerollt.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="recipe-sixth-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m5">
+          <div class="ingredient-image padding-top"><img src="../images/step-6.jpeg" alt="cake small roll"></div>
+          <div class="ingredient-image padding-top"><img src="../images/step-7.jpeg" alt="cake larger roll"></div>
+        </div>
+        <div class="col s12 m7">
+          <h3><span class="handwriting recipe-step">6 Einrollen</span></h3>
+          <p>
+            Nach der Backzeit die Backpapierfolie mit der Kuchenlage vorsichtig herausheben und auf eine flache Unterlage, zB. Tisch legen. Vorsicht, der Teig ist heiß!
+            Nun könnt ihr die Goiabada Creme dünn mit einem Spatel auf den Teig streichen.
+            Danach den Teig mit der langen Seite zu dir eng aufrollen. Dazu am Besten die Backpapierfolie nutzen oder ihr versucht es mit der Hand.
+            Danach die Rolle zu Seite legen.
+          </p>
+          <p>
+            Die nächste Teiglage wird dann wieder mit Goiabada eingestrichen und um die Teigrolle gerollt.
+            Diesen Schritt wiederholt ihr nun mit allen Teiglagen solange bis eine große Teigrolle - der Kuchen entsteht.
+          </p>
+          <p class="hint"><span class="hint-header">Tipp: </span>Falls ihr mehrere Backbleche zur Verfügung habt und mehrere Teige vorbereitet habt, dann könnt ihr nun schon den nächste Teig in den Backofen geben. Achtung! Am Besten einen Wecker stellen, damit der Teig nicht verbrennt.</p>
         </div>
       </div>
     </div>
@@ -148,8 +226,8 @@
     <div class="section no-pad-bot social-media-background">
       <div class="container">
         <div class="row center social-media-icons">
-          <a href="https://www.facebook.com/boloderoloberlin/"><img src="images/facebook-f.svg"></a>
-          <a href="https://br.pinterest.com/rese_m/bolo-de-rolo-berlin/"><img src="images/pinterest-p.svg"></a>
+          <a href="https://www.facebook.com/boloderoloberlin/"><img src="../images/facebook-f.svg"></a>
+          <a href="https://br.pinterest.com/rese_m/bolo-de-rolo-berlin/"><img src="../images/pinterest-p.svg"></a>
         </div>
       </div>
     </div>
@@ -163,7 +241,7 @@
     </div>
     <div class="copyright">
       <a class="copyright-wrapper" href="https://theresamannschatz.design">
-        <img class="brand-figure" id="chamaeleon-footer-brand" src="images/chamaeleon.png" alt="chamaleon-symbol-footer">
+        <img class="brand-figure" id="chamaeleon-footer-brand" src="../images/chamaeleon.png" alt="chamaleon-symbol-footer">
         <p>copyright @theresamannschatz.design 2023</p>
       </a>
     </div>
@@ -172,8 +250,8 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
