Add links to navbar

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">
+      <a id="logo-container" href="index.html" class="brand-logo">
         <img src="images/logo.png" alt="bolo de rolo brand logo ">
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Übersicht</a></li>
-        <li><a href="#">Rezept</a></li>
+        <li><a href="index.html">Übersicht</a></li>
+        <li><a href="recipe/index.html">Rezept</a></li>
         <li><a href="#">Hintergrund</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Übersicht</a></li>
-        <li><a href="#">Rezept</a></li>
+        <li><a href="index.html">Übersicht</a></li>
+        <li><a href="/recipe/index.html">Rezept</a></li>
         <li><a href="#">Hintergrund</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
