--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
           <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
           <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
           <p>
-            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Ich will das lernen!</a>
+            <a href="../recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Ich will das lernen!</a>
           </p>
         </div>
       </div>
