--- a/recipe/index.html
+++ b/recipe/index.html
@@ -62,7 +62,11 @@
     <div class="container">
       <div id="first-row">
         <div class="image-wrapper"><img src="../images/products/goiaba.jpeg" alt="bolo de rolo hero background image"></div>
-        <a href="#" class="btn">paypal</a>
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+          <input type="hidden" name="hosted_button_id" value="B7Y9E2L2RSZ2J" />
+          <input type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
+          <img alt="donation via paypal" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
+        </form>
       </div>
       <div id="intro-content">
         <h3><span class="handwriting">Jetzt gehts los!</span> Mein Rezept</h3>
@@ -216,6 +220,33 @@
             Diesen Schritt wiederholt ihr nun mit allen Teiglagen solange bis eine große Teigrolle - der Kuchen entsteht.
           </p>
           <p class="hint"><span class="hint-header">Tipp: </span>Falls ihr mehrere Backbleche zur Verfügung habt und mehrere Teige vorbereitet habt, dann könnt ihr nun schon den nächste Teig in den Backofen geben. Achtung! Am Besten einen Wecker stellen, damit der Teig nicht verbrennt.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="parallax"><img src="../images/leaves-background-image.jpg" alt="background image with tropical leaves"></div>
+  </div>
+
+  <div id="affiliate-links-section">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m12 center">
+          <h3><span class="handwriting recipe-step">Material und Gerätschaften</span></h3>
+          <p>Hier stelle ich euch die Gerätschaften und Werkzeuge vor mit denen ich arbeite. Kleiner Hinweis, ich verdiene ein wenig Geld damit, wenn ihr über die Links etwas kaufen solltet ;)</p>
+        </div>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <a href="https://www.amazon.de/WMF-Crepes-Teigverteiler-Cromargan-Kunststoff-teilmattiert/dp/B001V7B30C?crid=2OD15OJOZMFC0&keywords=wmf+crepe+verteiler&qid=1676406342&sprefix=wmf+crepe+%2Caps%2C151&sr=8-5&linkCode=li2&tag=resetetema-21&linkId=35adc7be9cf230082aceb2b65929e7d2&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B001V7B30C&Format=_SL160_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li2&o=3&a=B001V7B30C" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />                <span class="card-title">Teigverteiler</span>
+              </div>
+              <div class="card-content">
+                <p>WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen . Ich habe einiges ausprobiert und kam mit diesem Gerät am beste zurecht.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
