--- a/recipe/index.html
+++ b/recipe/index.html
@@ -236,21 +236,64 @@
           <h3><span class="handwriting recipe-step">Material und Gerätschaften</span></h3>
           <p>Hier stelle ich euch die Gerätschaften und Werkzeuge vor mit denen ich arbeite. Kleiner Hinweis, ich verdiene ein wenig Geld damit, wenn ihr über die Links etwas kaufen solltet ;)</p>
         </div>
+        <!-- begin cards -->
         <div class="row">
-          <div class="col s12 m4">
-            <div class="card">
-              <div class="card-image">
-                <a href="https://www.amazon.de/WMF-Crepes-Teigverteiler-Cromargan-Kunststoff-teilmattiert/dp/B001V7B30C?crid=2OD15OJOZMFC0&keywords=wmf+crepe+verteiler&qid=1676406342&sprefix=wmf+crepe+%2Caps%2C151&sr=8-5&linkCode=li2&tag=resetetema-21&linkId=35adc7be9cf230082aceb2b65929e7d2&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B001V7B30C&Format=_SL160_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li2&o=3&a=B001V7B30C" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />                <span class="card-title">Teigverteiler</span>
-              </div>
-              <div class="card-content">
-                <p>WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen . Ich habe einiges ausprobiert und kam mit diesem Gerät am beste zurecht.</p>
+          <!-- card 1 -->
+          <a href="https://amzn.to/4177rt8"></a>
+            <div class="col s12 m4">
+              <div class="card large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/WMF-Crepes-Teigverteiler-Cromargan-Kunststoff-teilmattiert/dp/B001V7B30C?crid=2OD15OJOZMFC0&keywords=wmf+crepe+verteiler&qid=1676406342&sprefix=wmf+crepe+%2Caps%2C151&sr=8-5&linkCode=li2&tag=resetetema-21&linkId=35adc7be9cf230082aceb2b65929e7d2&language=de_DE&ref_=as_li_ss_il" target="_blank">
+                      <img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B001V7B30C&Format=_SL160_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE">
+                    </a>
+                    <img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li2&o=3&a=B001V7B30C" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;">
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Teigverteiler</span>
+                  <p>WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen . Ich habe einiges ausprobiert und kam mit diesem Gerät am beste zurecht.</p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
+          </a>
+          <!-- card 2 -->
+          <a href="https://amzn.to/3lzWDTU">
+            <div class="col s12 m4">
+              <div class="card large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/AEG-Backblech-Backofen-140020490029-466x385x22mm/dp/B08J2468DH?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1EN6LFYTEGK9R&keywords=backblech+nachhaltig+flach&qid=1676409644&s=kitchen&sprefix=backblech+nachhaltig+flach%2Ckitchen%2C102&sr=1-5&linkCode=li3&tag=resetetema-21&linkId=e584c2183e11552c9d5606aa3662a96e&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08J2468DH&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B08J2468DH" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Backblech</span>
+                  <p>Ich habe Bleche direkt aus Recife Brasilien mitgebracht, aber ihr könnt natürlich ganz normale Backbleche verwenden. Ein paar Extrableche schaden nicht und ihr könnt mehr Teige fürs Backen vorbereiten. Dies spart euch einiges an Zeit.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <!-- card 3 -->
+          <a href="https://amzn.to/3k0U6Ss">
+            <div class="col s12 m4">
+              <div class="card large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/gp/product/B014TDD6OU?ie=UTF8&psc=1&linkCode=li3&tag=resetetema-21&linkId=454e1fbdf192cf714f94d87464be5b4c&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B014TDD6OU&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B014TDD6OU" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Backpapier mal anders</span>
+                  <p>Dieses Backpapier ist fantastisch. Es ist nicht ganz billig, aber es lohnt sich. Ich habe meine schon für unzählige Kuchen verwendet. Irgendwann zeigen sie natürlich auch Abnutzungserscheinungen, aber sie leisten mir sehr gute Dienste. Ich habe gleich 6 bereit, damit ich alle Teige bereithalten kann.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div> <!-- end cards -->
       </div>
     </div>
   </div>
+
 
   <footer class="page-footer no-pad-top">
     <!-- Social media -->
