--- a/recipe/index.html
+++ b/recipe/index.html
@@ -236,12 +236,12 @@
           <h3><span class="handwriting recipe-step">Material und Gerätschaften</span></h3>
           <p>Hier stelle ich euch die Gerätschaften und Werkzeuge vor mit denen ich arbeite. Kleiner Hinweis, ich verdiene ein wenig Geld damit, wenn ihr über die Links etwas kaufen solltet ;)</p>
         </div>
-        <!-- begin cards -->
+        <!-- begin cards row 1 -->
         <div class="row">
           <!-- card 1 -->
           <a href="https://amzn.to/4177rt8"></a>
             <div class="col s12 m4">
-              <div class="card large">
+              <div class="card extra-large">
                 <div class="card-image">
                   <div class="inner-card-image">
                     <a href="https://www.amazon.de/WMF-Crepes-Teigverteiler-Cromargan-Kunststoff-teilmattiert/dp/B001V7B30C?crid=2OD15OJOZMFC0&keywords=wmf+crepe+verteiler&qid=1676406342&sprefix=wmf+crepe+%2Caps%2C151&sr=8-5&linkCode=li2&tag=resetetema-21&linkId=35adc7be9cf230082aceb2b65929e7d2&language=de_DE&ref_=as_li_ss_il" target="_blank">
@@ -252,7 +252,7 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title">Teigverteiler</span>
-                  <p>WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen . Ich habe einiges ausprobiert und kam mit diesem Gerät am beste zurecht.</p>
+                  <p class="small-text">WMF Profi Plus Crepes Verteiler 19 cm. Damit könnt ihr prima den Teig verteilen . Ich habe einiges ausprobiert und kam mit diesem Gerät am beste zurecht.</p>
                 </div>
               </div>
             </div>
@@ -260,7 +260,7 @@
           <!-- card 2 -->
           <a href="https://amzn.to/3lzWDTU">
             <div class="col s12 m4">
-              <div class="card large">
+              <div class="card extra-large">
                 <div class="card-image">
                   <div class="inner-card-image">
                     <a href="https://www.amazon.de/AEG-Backblech-Backofen-140020490029-466x385x22mm/dp/B08J2468DH?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1EN6LFYTEGK9R&keywords=backblech+nachhaltig+flach&qid=1676409644&s=kitchen&sprefix=backblech+nachhaltig+flach%2Ckitchen%2C102&sr=1-5&linkCode=li3&tag=resetetema-21&linkId=e584c2183e11552c9d5606aa3662a96e&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08J2468DH&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B08J2468DH" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
@@ -268,7 +268,7 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title">Backblech</span>
-                  <p>Ich habe Bleche direkt aus Recife Brasilien mitgebracht, aber ihr könnt natürlich ganz normale Backbleche verwenden. Ein paar Extrableche schaden nicht und ihr könnt mehr Teige fürs Backen vorbereiten. Dies spart euch einiges an Zeit.</p>
+                  <p class="small-text">Ich habe Bleche direkt aus Recife Brasilien mitgebracht, aber ihr könnt natürlich ganz normale Backbleche verwenden. Ein paar Extrableche schaden nicht und ihr könnt mehr Teige fürs Backen vorbereiten. Dies spart euch einiges an Zeit.</p>
                 </div>
               </div>
             </div>
@@ -276,20 +276,72 @@
           <!-- card 3 -->
           <a href="https://amzn.to/3k0U6Ss">
             <div class="col s12 m4">
-              <div class="card large">
+              <div class="card extra-large">
                 <div class="card-image">
                   <div class="inner-card-image">
-                    <a href="https://www.amazon.de/gp/product/B014TDD6OU?ie=UTF8&psc=1&linkCode=li3&tag=resetetema-21&linkId=454e1fbdf192cf714f94d87464be5b4c&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B014TDD6OU&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B014TDD6OU" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-                  </div>
+                    <a href="https://www.amazon.de/gp/product/B014TDD6OU?ie=UTF8&psc=1&linkCode=li1&tag=resetetema-21&linkId=9226103a89a9cc4de72125a41059da8c&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B014TDD6OU&Format=_SL110_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li1&o=3&a=B014TDD6OU" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />                  </div>
                 </div>
                 <div class="card-content">
                   <span class="card-title">Backpapier mal anders</span>
-                  <p>Dieses Backpapier ist fantastisch. Es ist nicht ganz billig, aber es lohnt sich. Ich habe meine schon für unzählige Kuchen verwendet. Irgendwann zeigen sie natürlich auch Abnutzungserscheinungen, aber sie leisten mir sehr gute Dienste. Ich habe gleich 6 bereit, damit ich alle Teige bereithalten kann.</p>
+                  <p class="small-text">Dieses Backpapier ist fantastisch. Es ist nicht ganz billig, aber es lohnt sich. Ich habe meine schon für unzählige Kuchen verwendet. Irgendwann zeigen sie natürlich auch Abnutzungserscheinungen, aber sie leisten mir sehr gute Dienste. Ich habe gleich 6 bereit, damit ich alle Teige bereithalten kann.</p>
                 </div>
               </div>
             </div>
           </a>
-        </div> <!-- end cards -->
+        </div>
+        <!-- end cards -->
+        <!-- begin cards row 2 -->
+        <div class="row">
+          <!-- card 1 -->
+          <a href="https://amzn.to/3K4I2dh">
+            <div class="col s12 m4">
+              <div class="card extra-large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/Goibada-Predileta-Predilecta-Guaven-konfit%C2%B7-320g/dp/B00ZGT9OP2?keywords=Predilecta&qid=1676411169&sr=8-32&linkCode=li2&tag=resetetema-21&linkId=c9ad75129b1bd918b43bd07e3be39cf5&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B00ZGT9OP2&Format=_SL160_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li2&o=3&a=B00ZGT9OP2" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Goiabada - Guavenpaste</span>
+                  <p class="small-text">Die Goiabada Cremosa hat sich am als Beste herausgestellt. Sie ist sehr fruchtig und intensiv im Geschmack. Leider ist sie nicht so einfach zu bekommen. Aber mit etwas Glück.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <!-- card 2 -->
+          <a href="https://amzn.to/3xqLJmc">
+            <div class="col s12 m4">
+              <div class="card extra-large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/FlexiSpatel-Flexibler-Spatel-Thermomix-Mixtopf/dp/B08XQN7YK6?__mk_de_DE=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1EY6KCHFE24Q2&keywords=spatel+backen+silikon+ikea&qid=1676493933&sprefix=spatel+backen+silikon+ikea%2Caps%2C101&sr=8-2-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1&smid=A244EO2N9YI79V&linkCode=li3&tag=resetetema-21&linkId=06b86bae0e9c1739e0742539a475ede6&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B08XQN7YK6&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B08XQN7YK6" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Spatel</span>
+                  <p class="small-text">Mit diesem Spatel kannst du die Füllung auf dem Teig gut und gleichmäßig verstreichen.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <!-- card 3 -->
+          <a href="https://amzn.to/3XxvluS">
+            <div class="col s12 m4">
+              <div class="card extra-large">
+                <div class="card-image">
+                  <div class="inner-card-image">
+                    <a href="https://www.amazon.de/Emsa-2217100000-Messbecher-Transparent-Superline/dp/B0002HP5D8?crid=2FLUV1BX0S68W&keywords=messbecher+edelstahl+mehl+zucker&qid=1676494303&sprefix=messbecher+mehl+zucker+edels%2Caps%2C177&sr=8-14&linkCode=li3&tag=resetetema-21&linkId=681ce97ec462809cdbc90f8d3ea385bd&language=de_DE&ref_=as_li_ss_il" target="_blank"><img border="0" src="//ws-eu.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0002HP5D8&Format=_SL250_&ID=AsinImage&MarketPlace=DE&ServiceVersion=20070822&WS=1&tag=resetetema-21&language=de_DE" ></a><img src="https://ir-de.amazon-adsystem.com/e/ir?t=resetetema-21&language=de_DE&l=li3&o=3&a=B0002HP5D8" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                  </div>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">Messbecher</span>
+                  <p class="small-text">Super praktisch. Einfach 250g Mehl oder Zucker einfüllen fertig.</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <!-- end cards -->
       </div>
     </div>
   </div>
