--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="hero-text-wrapper">
           <h1 id="hero-title">Bolo de Rolo</h1>
           <h2 id="hero-subtitle">Lerne den wahrscheinlich leckersten Kuchen Brasiliens kennen!</h2>
-          <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Zum Rezept</a>
+          <a href="recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Zum Rezept</a>
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
           <h2 class="mdi-content-send section-header">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
           <p class="left-align light">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
           <p>
-            <a href="#" id="recipe-button" class="btn-large waves-effect waves-light">Hintergrund</a>
+            <a href="recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Ich will lernen!</a>
           </p>
         </div>
       </div>
@@ -134,7 +134,7 @@
           <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
           <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
           <p>
-            <a href="../recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Ich will das lernen!</a>
+            <a href="../recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Hintergrund</a>
           </p>
         </div>
       </div>
