--- a/recipe/index.html
+++ b/recipe/index.html
@@ -225,7 +225,7 @@
     </div>
   </div>
 
-  <div class="parallax-container valign-wrapper">
+  <div class="parallax-container valign-wrapper" id="section-separator">
     <div class="parallax"><img src="../images/leaves-background-image.jpg" alt="background image with tropical leaves"></div>
   </div>
 
@@ -346,6 +346,9 @@
     </div>
   </div>
 
+  <div class="parallax-container valign-wrapper section-separator">
+    <div class="parallax"><img src="../images/leaves-background-image.jpg" alt="background image with tropical leaves"></div>
+  </div>
 
   <footer class="page-footer no-pad-top">
     <!-- Social media -->
