--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
   </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
+  <div class="parallax-container">
+    <div class="no-pad-bot">
       <div class="container">
         <div class="row center">
           <h2 class="header col s12 light"><span class="quotes">"</span> Brasilianische Kuchentradition trifft kreatives Berlin <span class="quotes end-quote">"</span></h2>
-          <p class="col s6 offset-s3"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
+          <p class="col m6 s12 offset-m3"> Hier könnt ihr lernen wie man mit viel Liebe in echter Handarbeit den berühmten Pernambucanischen Bolo de Rolo - einen Rollkuchen zubereiten könnt.</p>
         </div>
       </div>
     </div>
@@ -113,31 +113,30 @@
 
   <div class="section small-section no-pad-bot no-pad-top">
     <div class="row">
-      <div class="col s6">
+      <div class="col s12 m6">
         <div class="container">
           <h2 class="mdi-content-send section-header">Wie alles began! Lerne wie es geht! <span class="text-highlight">Mit Rezept!</span></h1>
           <p class="left-align light">Hier erfährst du mehr darüber wie ich auf die Idee gekommen bin diesen leckeren exotischen Kuchen für Berlin zu backen und wie ich ihn herstellen. Ihr erfahrt auch wie ihr ihn selbst herstellen könnt! Das Rezept gibt es hier!</h2>
-          <p>
-            <a href="recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Ich will lernen!</a>
-          </p>
+          <p class="center"><a href="recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Ich will lernen!</a></p>
         </div>
       </div>
-      <div class="col s6 half-page-images" id="figures-background"></div>
+      <div class="col m6 s12 half-page-images" id="figures-background"></div>
     </div>
   </div>
 
   <div class="section small-section no-pad-bot no-pad-top">
     <div class="row">
-      <div class="col s6 half-page-images" id="boloderolo-background"></div>
-      <div class="col s6">
+      <div class="col m6 half-page-images desktop-only" id="boloderolo-background"></div>
+      <div class="col m6 s12">
         <div class="container">
           <h2 class="mdi-content-send section-header">Was ist Bolo de Rolo?</span></h1>
           <p class="left-align light">Hier findet ihr Information zum Ursprung des Kuchens und was ihn so besonders macht. Ihr erfahrt auch wie er zum kulturellen Erbe Pernambucos in Nordostbrasilien wurde.</h2>
-          <p>
+          <p class="center">
             <a href="../recipe/index.html" id="recipe-button" class="btn-large waves-effect waves-light">Hintergrund</a>
           </p>
         </div>
       </div>
+      <div class="col s12 half-page-images mobile-only" id="boloderolo-background"></div>
     </div>
   </div>
 
