--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
       <ul id="nav-mobile" class="sidenav">
         <li><a href="index.html">Übersicht</a></li>
-        <li><a href="/recipe/index.html">Rezept</a></li>
+        <li><a href="recipe/index.html">Rezept</a></li>
         <li><a href="#">Hintergrund</a></li>
         <li><a href="#">Kontakt</a></li>
       </ul>
