Setup of accordeon for background page

--- a/imprint/index.html
+++ b/imprint/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="de">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Bolo de Rolo - Rezept</title>
+  <title>Bolo de Rolo - Impressum</title>
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="../apple-icon-57x57.png">
