--- a/background/index.html
+++ b/background/index.html
@@ -61,32 +61,140 @@
       <h3 class="section-header">Hintergrund</h3>
       <!-- start blog accordeon -->
       <ul class="collapsible popout">
+        <!-- first blog entry -->
         <li>
           <div class="collapsible-header">
             <div class="blog-image-wrapper">
               <img class="materialboxed" src="../images/background/press_article_front.jpg" alt="press article front page">
             </div>
-            <div class="left-align">
-              <h4 class="blog-title">Mein erster Presseartikel</h4>
-              <p class="blog-sub-title"> Im Januar 2018 ist der erste <a href="http://berlinsbestebaecker.de/geschichtet-gefuellt-und-gerollt/">Presseartikel</a> über Bolo de Rolo Berlin erschienen. Ihr könnt ihn hier sehr gern lesen! Viel Spass! </p>
+            <div class="blog-title">
+              <h4>Mein erster Presseartikel</h4>
+              <p> Im Januar 2018 ist der erste <a href="http://berlinsbestebaecker.de/geschichtet-gefuellt-und-gerollt/">Presseartikel</a> über Bolo de Rolo Berlin erschienen. Ihr könnt ihn hier sehr gern lesen! Viel Spass! </p>
             </div>
           </div>
           <div class="collapsible-body">
-            <span>Im Januar 2018 ist der erste <a href="http://berlinsbestebaecker.de/geschichtet-gefuellt-und-gerollt/">Presseartikel</a> über Bolo de Rolo Berlin erschienen. Ihr könnt ihn hier sehr gern lesen! Viel Spass! </span>
+            <p>Der Artikel ist auch <a href="http://berlinsbestebaecker.de/geschichtet-gefuellt-und-gerollt/">hier</a> verfügbar.</p>
+            <div class="blog-main-article-img-wrapper">
+              <img class="materialboxed" src="../images/background/press_article_first_page.jpg" alt="press article first page">
+              <img class="materialboxed" src="../images/background/press_article_second_page.jpg" alt="press article second page">
+            </div>
           </div>
         </li>
+        <!-- second blog entry -->
         <li>
-          <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-          <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+          <div class="collapsible-header">
+            <div class="blog-image-wrapper">
+              <img class="materialboxed" src="../images/background/how-to-eat.jpg" alt="several small cakes">
+            </div>
+            <div class="blog-title">
+              <h4>Wie serviert man den Bolo de Rolo am besten?</h4>
+              <p></p>
+            </div>
+          </div>
+          <div class="collapsible-body">
+            <p>Am besten isst man den Kuchen in dünnen Scheiben (ca. jeweils 0.5 cm) geschnitten und isst ihn bei Zimmertemperatur.</p>
+            <p>Eiscreme, milder Käse und eine Tasse Kaffee passen super dazu.</p>
+          </div>
         </li>
+        <!-- cake speciality blog entry -->
         <li>
-          <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-          <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+          <div class="collapsible-header">
+            <div class="blog-image-wrapper">
+              <img class="materialboxed" src="../images/background/blog-traditional-cake.jpg" alt="traditional bolo de rolo">
+            </div>
+            <div class="blog-title">
+              <h4>Was macht ihn so besonders ...</h4>
+              <p>... und warum habe ich neue Geschmacksrichtungen entwickelt?</p>
+            </div>
+          </div>
+          <div class="collapsible-body left-align">
+            <p>In Pernambuco, Brasilien, wird der Kuchen traditionell mit Guave hergestellt. Für viele von uns ist diese Frucht fast unbekannt - vielleicht kennen sie manche dem Namen nach, aber sicherlich ist den wenigsten der Geschmack vertraut.</p>
+            <p>Eine Auswahl der besonderen Früchte, die manchem eventuell noch nicht so bekannt sind, list ich euch gern einmal auf:</p>
+            <div class="blog-main-article-img-wrapper">
+              <img class="materialboxed" src="../images/background/different-sabors.jpg" alt="my different flavours for the bolo de rolo">
+            </div>
+            <ul class="blog-list">
+              <li><a href="https://de.wikipedia.org/wiki/Echte_Guave">Guave (Goiaba)</a>, ist eine tropische Frucht, die man hierzulande schwer bis gar nicht frisch bekommt. Sie hat einen sehr charakteristischen Geruch und Geschmack.</li>
+              <li><a href="https://de.wikipedia.org/wiki/Papaya">Papaya (Mamão)</a>, ist eine weitere tropische Frucht, die es ab und zu frisch zu kaufen gibt. Es handelt sich um eine sehr schöne grüne Frucht mit orangenem Fruchtfleisch und schwarzen Kernen.</li>
+              <li><a href="https://de.wikipedia.org/wiki/Passiflora_edulis">Maracujá (Passionsfrucht)</a>, ist eine kleine gelbe oder lila-farbene tropische Frucht einer Kletterpflanze. Das Fruchtfleisch ist eher flüssig, recht sauer und enthält schwarze Kerne, die man mitessen kann.</li>
+              <li><a href="https://de.wikipedia.org/wiki/Sanddorn">Sanddorn</a>, kennt ihr bestimmt. Er kommt in Deutschland vor allem an der Küste vor. Die kleinen orangenen Früchte wachsen an Sträuchern, sind sehr sauer und haben einen sehr spezifischen Geschmack. Es gibt Sandorn als Marmeladen, Fruchtmus, Saft und weiteren Süßigkeiten.</li>
+            </ul>
+          </div>
         </li>
+        <!-- logo description blog entry -->
+        <li>
+          <div class="collapsible-header">
+            <div class="blog-image-wrapper">
+              <img class="responsive-img" src="../images/logo.png" alt="traditional bolo de rolo">
+            </div>
+            <div class="blog-title">
+              <h4>Was macht der Hahn im Logo?</h4>
+              <p>Eine kurze Erklärung.</p>
+            </div>
+          </div>
+          <div class="collapsible-body left-align">
+            <p>Wie bin ich eigentlich auf das Logo gekommen?</p>
+            <p>Zunächst natürlich der Name des Kuchens <span class="text-highlight">Bolo de Rolo</span>.</p>
+            <p>Der Link zu <span class="text-highlight">Berlin</span> durfte natürlich auch nicht fehlen.</p>
+            <p><span class="text-highlight">Cake</span> ist schlussendlich ein Hinweis darauf worum es sich eigentlich handelt.</p>
+            <p>Abschließend durfte auch ein typisches Symbol der Ursprungsstadt nicht fehlen. Recife ist sehr bekannt für seinen Karneval und dafür steht bereits seit 1978 der <span class="text-highlight">Hahn - Galo da Madrugada</span>.</p>
+            <div class="video-container">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Xc5_NXVdhek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+          </div>
+        </li>
+        <!-- history of cake blog entry -->
+        <li>
+          <div class="collapsible-header">
+            <div class="blog-image-wrapper">
+              <img class="materialboxed responsive-img" src="../images/background/recife.jpeg" alt="recife city center">
+            </div>
+            <div class="blog-title">
+              <h4>Die Gechichte des Kuchens</h4>
+              <p>... noch eine kurze Erklärung.</p>
+            </div>
+          </div>
+          <div class="collapsible-body left-align">
+            <p>Der Ursprung des Kuchens ist der portugiesische <span class="text-highlight">Colchão de Noiva</span> (port. sinngemäß Brautbett), ein ursprünglich aus dem Ort Taviraan der Algarve stammender Kuchen. Vermutlich kam der Bolo de Rolo bereits im 17. Jahrhundert nach Pernambuco.</p>
+            <p>Pernambuco mit der <span class="text-highlight">Hauptstadt Recife</span> liegt im Nordosten Brasiliens.</p>
+            <p>Die Damen der wohlhabenden Geschäftsleute konnten hier jedoch nicht die in Portugal üblichen Marmeladen aus Birnen oder Quitten (port.: Marmelo) verwenden, ebenso waren Zutaten wie Mandeln, Pinienkerne oder Ingwer in Brasilien schwer zu haben. In der Folge ersetzten sie diese mit regionalen Fruchtzubereitungen, neben Cashewnuss und -frucht, Banane oder Ananas wurde vor allem Goiaba (dt.: Guave) verwendet.</p>
+            <p>Ausserdem rollten sie den Kuchen wobei die einzelnen Schichten immer und immer dünner wurden. Der Kuchen wurde so dann als "obligatorisches" Dessert den Gästen serviert. Der Bekanntheitsgrad des Kuchens nahm stetig zu und wurde auch über die Bundesstaatsgrenzen hinaus in ganz Brasilien bekannt.</p>
+            <p>So war der <span class="text-highlight">Bolo de Rolo</span> als eine traditionelle Spezialität Pernambucos bereits lange etabliert, bevor mit der Übersiedlung des portugiesischen Königshauses 1808 nach Rio de Janeiro auch der Einfluss französischer Kultur im Land spürbar wurde, und sich auch gastronomisch bemerkbar machte.</p>
+            <p>So blieb der Kuchen eine Spezialität Pernambucos, die im Wesentlichen bis heute unverändert geblieben ist.</p>
+            <p>Der Kuchen wurde 2007 als <span class="text-highlight">kulturelles Erbe Pernambucos</span> durch das Parlament des brasilianischen Bundesstaates anerkannt. Der Kuchen wird in sehr dünnen Scheiben gegessen, gerne auch mit einer Tasse Kaffee und einem Stück Käse oder einer Kugel Eis gegessen (Source: Wikipedia, Fundação Joaquim Nabuco)</p>
+            <div class="padding-bottom right-align">
+              <a href="https://de.wikipedia.org/wiki/Bolo_de_rolo">Quelle des Inhalts</a>
+            </div>
+            <img class="responsive-img" src="../images/background/history-of-cake.jpg" alt="recife brazil">
+          </div>
+        </li>
+        <!-- about me blog entry -->
+        <li>
+          <div class="collapsible-header">
+            <div class="blog-image-wrapper">
+              <img class="responsive-img" src="../images/background/wer-bin-ich.jpeg" alt="recife city center">
+            </div>
+            <div class="blog-title">
+              <h4>Etwas über mich</h4>
+            </div>
+          </div>
+          <div class="collapsible-body left-align">
+            <p>Ich, Theresa, repräsentiere nach langjährigem Kontakt mit Brasilien genauso wie der Bolo de Rolo Berlin die personalisierte Brücke zwischen brasilianischer - eigentlich Pernambucanischer - und deutscher Kultur.</p>
+            <p>Ich habe mich eigentlich schon immer sehr gern mit dem Kochen und gesunder, nachhaltiger Ernährung beschäftigt (obwohl Kuchen natürlich nicht wirklich gesund ist :) ). Allerdings habe ich eine völlig andere Richtung eingeschlagen und zunächst Geoökologie studiert. Aufgrund eines kleinen Praktikums in <span class="text-highlight">Ouro Preto (Minas Gerais)</span> konnte ich meine ersten Erfahrungen in Brasilien machen.</p>
+            <p>Diese Erfahrung hat eigentlich mein Leben ziemlich umgekrempelt und sehr stark beeinflusst - da ich mich sofort zuhause gefühlt habe.</p>
+            <p>So kam es dann, dass ich immer und immer wieder zurück nach Brasilien kam - mal habe ich in <span class="text-highlight">Campinas (São Paulo)</span> studiert, mal eine Forschungsreise durch den Nordosten Brasiliens gemacht (von <span class="text-highlight">Natal nach Salvador nach Palmas</span>) und mal in einem kleinen Forschungsprojekt in <span class="text-highlight">Curitiba</span> mitgewirkt.
+            <p>Für meine Doktorarbeit bin ich dann noch einmal nach Brasilien zurückgekehrt bis ich mich dann aus privaten Gründen schließlich aus der Forschung zurückgezogen habe.</p>
+            <p>Zurück in Berlin, wollte ich gerne etwas aus Brasilien hierher holen, was beide Welten miteinander verbinden kann und vielleicht dem einen oder Anderen hier mit etwas Süßem ein Stück-weit glücklicher macht.</p>
+            <p>In der Brasilienkarte findest du bestimmt auch die Orte, auf die ich mich hier beziehe, wieder. </p>
+            <div class="video-container">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126418.55911512884!2d-35.02025082944563!3d-8.042165341692503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f88c446e5%3A0x3c9ef52922447fd4!2sRecife%20-%20PE%2C%20Brasil!5e0!3m2!1spt-BR!2sde!4v1679668526841!5m2!1spt-BR!2sde" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+        </li>
+        <!-- end of blog entries -->
       </ul>
     </div>
   </div>
-
 
   <div class="parallax-container valign-wrapper section-separator">
     <div class="parallax"><img src="../images/leaves-background-image.jpg" alt="background image with tropical leaves"></div>
